# Argentum20

./: README.md  WorldEditor.ini  WorldEditor.vbw
AOLibrary/: .gitattributes  .gitignore  CMakeLists.txt
AOLibrary/src/: callback.cpp  declares.h  dllmain.cpp
AOLibrary/src/include/: declares.h
Compressor/: .gitattributes  Compressor.vbp  README.md
Creador de mundo/: Project1.csi  Project1.lvw  Project1.vbp  Project1.vbw
IndexCreator/: .gitignore  Project1.vbp  Project1.vbw
IndexHiPro/: .gitignore  Indexador.ini  Indexador.vbp  Indexador.vbw  Thumbs.db
QuestNPCsMapData/: QuestNPCsMapData.vbp  QuestNPCsMapData.vbw
Recursos/: .gitignore  CAMBIOS.txt  COMPRIMIR_RECURSOS_NO_JENKINS.bat  CREADOR_RECURSOS_COMPRIMIDOS_OUTPUT.bat  CREADOR_RECURSOS_COMPRIMIDOS_OUTPUT_JENKINS.bat  CREAR_INDICES_JENKINS.bat  LLaves casas Pablo.xlsx  Mapas.xls  NPC_QUEST.txt  Objetos.xlsx  changelog.txt  chicken.xlsx  npc.xlsx  pesca.xlsx  version.php
Source AO Minimap Color Finder/: MSSCCPRJ.SCC  Module1.bas  frmmain.frm  frmmain.frx  grh.bas  grhminimap.vbp  grhminimap.vbw
World Editor Render/: Novedades.txt  WorldEditor.csi  WorldEditor.ini  WorldEditor.vbp  WorldEditor.vbw
Worldeditor/: WorldEditor.ini  WorldEditor.vbp  WorldEditor.vbw  errores.txt
ao20-CryptoClient/: Client.vbp  Client.vbw  Form1.frm  ModConnection.bas  README.md  app.rar  character.txt
ao20-autoupdate/: AutoUpdate.vbp  ConfigAutoupdate.ini
ao20-calendario-eventos/: README.md  calendario.json
ao20-changelog-tool/: README.md  main.js  package-lock.json  package.json
ao20-wiki/: Carpintería.html  (+31 more)
(+4546 files in other folders)
